--- a/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
+++ b/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
@@ -154,8 +154,8 @@
                             <td class="py-3 text-center">@articulo.PK_Articulo</td>
                             <td class="py-3 text-center">@articulo.Descripcion</td>
                             <td class="py-3 text-center">@articulo.Cantidad</td>
-                            <td class="py-3 text-center">@articulo.Costo</td>
-                            <td class="py-3 text-center">@articulo.Precio</td>
+                            <td class="py-3 text-center">₡@articulo.Costo</td>
+                            <td class="py-3 text-center">₡@articulo.Precio</td>
                             <td class="py-3 text-center">
                                 <div class="flex justify-center space-x-2">
 
