--- a/ADMFacturar/Views/Vendedores/Index.cshtml
+++ b/ADMFacturar/Views/Vendedores/Index.cshtml
@@ -1,140 +1,308 @@
 ﻿@using ADM.Models
-@model IEnumerable<Vendedor>
-<link href="~/css/custom.css" rel="stylesheet" />
+@model Vendedor
 
+@{
+	var vendedores = ViewData["Vendedores"] as List<Vendedor>;
+}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Ingreso de Vendedor</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+	<link href="~/css/custom.css" rel="stylesheet" />
+	<!-- SweetAlert2 CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+</head>
+<body>
 <div class="w-full">
 </div>
 
-<!-- Formulario -->
-<form>
-    <div class="bg-gray-800 text-white p-5 rounded-lg shadow-lg">
-        <h2 class="text-lg font-bold mb-4">Filtro de Vendedores</h2>
-        <div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
-            <div class="sm:col-span-1">
-                <label for="nombre_vendedor" class="block text-sm font-medium">Nombre de Vendedor</label>
-                <div class="mt-1">
-                    <input type="text" id="nombre_vendedor" name="nombre_vendedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-        </div>
-    </div>
-</form>
-<!-- Final de Formulario -->
-
+	<!-- Formulario -->
+	<form>
+		<div class="bg-gray-800 text-white p-5 rounded-lg shadow-lg">
+			<h2 class="text-lg font-bold mb-4">Filtro de Vendedores</h2>
+			<div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
+				<div class="sm:col-span-1">
+					<label for="nombre_vendedor" class="block text-sm font-medium">Nombre de Vendedor</label>
+					<div class="mt-1">
+						<input type="text" id="nombre_vendedor" name="nombre_vendedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
+	<!-- Final de Formulario -->
 <div class="w-full mt-8">
-    <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
-        <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Vendedores</h3>
-        <div>
-            <a asp-action="CrearVendedor" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Vendedor</a>
-        </div>
-    </div>
+	<div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
+		<h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Vendedores</h3>
+		<div>
+			@* <a asp-action="CrearVendedor" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Vendedor</a>*@
+			<a onclick="abrirModal('modalCrearVendedor')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Vendedor</a>
 
-    <!-- Tabla -->
-    <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-        <table class="min-w-full leading-normal">
-            <thead>
-                <tr class="bg-gray-800 text-white">
-                    <th class="py-3 text-center">Codigo Vendedor</th>
-                    <th class="py-3 text-center">Nombre Vendedor</th>
-                    <th class="py-3 text-center">Telefono Vendedor</th>
-                    <th class="py-3 text-center">Correo Vendedor</th>
-                    <th class="py-3 text-center">Estado Vendedor</th>
-                    <th class="py-3 text-center">Acciones</th>
-                </tr>
-            </thead>
-            <tbody id="bodyTablaVendedores" class="text-gray-700">
-                @if (Model != null && Model.Any())
-                {
-                    @foreach (var item in Model)
-                    {
-                        <tr class="border-b border-gray-200 hover:bg-gray-100">
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => item.PK_Vendedor)</td>
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => item.Nombre)</td>
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => item.Telefono)</td>
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => item.Correo)</td>
-                            <td class="py-3 text-center">
-                                @if (item.Estado)
-                                {
-                                    <span class="bg-green-200 text-green-600 py-1 px-3 rounded-full text-xs">Activo</span>
-                                }
-                                else
-                                {
-                                    <span class="bg-red-200 text-red-600 py-1 px-3 rounded-full text-xs">Inactivo</span>
-                                }
-                            </td>
-                            <td>
-                                <div class="flex justify-center space-x-2">
-                                    <a asp-action="ActualizarVendedor" asp-route-PK="@item.PK_Vendedor" class="text-blue-600 hover:text-blue-900" title="Editar">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
-                                    <form method="post" asp-action="DesactivarVendedor" asp-route-PK="@item.PK_Vendedor" onsubmit="return mostrarConfirmacion(event)">
-                                        <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
-                                            <i class="fa-solid fa-ban"></i>
-                                        </button>
-                                    </form>
-                                </div>
-                            </td>
-                        </tr>
-                    }
-                }
-                else
-                {
-                    <tr>
-                        <td colspan="14">No hay datos disponibles.</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+		</div>
+	</div>
+
+
+	<!--                  Tabla                        -->
+	<div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
+		<table class="min-w-full leading-normal">
+			<thead>
+				<tr class="bg-gray-800 text-white">
+					<th class="py-3 text-center">Codigo Vendedor</th>
+					<th class="py-3 text-center">Nombre Vendedor</th>
+					<th class="py-3 text-center">Telefono Vendedor</th>
+					<th class="py-3 text-center">Correo Vendedor</th>
+					<th class="py-3 text-center">Estado Vendedor</th>
+					<th class="py-3 text-center">Acciones</th>
+				</tr>
+			</thead>
+				<tbody id="bodyTablaVendedores" class="text-gray-700">
+				@if (vendedores != null)
+				{
+					@foreach (var vendedor in vendedores)
+					{
+						<tr class="border-b border-gray-200 hover:bg-gray-100">
+								<td class="py-3 text-center">@Html.DisplayFor(modelItem => vendedor.PK_Vendedor)</td>
+								<td class="py-3 text-center">@Html.DisplayFor(modelItem => vendedor.Nombre)</td>
+								<td class="py-3 text-center">@Html.DisplayFor(modelItem => vendedor.Telefono)</td>
+								<td class="py-3 text-center">@Html.DisplayFor(modelItem => vendedor.Correo)</td>
+							<td class="py-3 text-center">
+									@if (vendedor.Estado)
+									{
+									<span class="bg-green-200 text-green-600 py-1 px-3 rounded-full text-xs">Activo</span>
+								}
+								else
+								{
+									<span class="bg-red-200 text-red-600 py-1 px-3 rounded-full text-xs">Inactivo</span>
+								}
+							</td>
+							@* <td class="p-3 border border-gray-300"> *@
+								<td>
+									<div class="flex justify-center space-x-2">
+										<a asp-action="ActualizarVendedor" asp-route-PK="@vendedor.PK_Vendedor" class="text-blue-600 hover:text-blue-900" title="Editar">
+											<i class="fas fa-edit"></i>
+										</a>
+										<form method="post" asp-action="DesactivarVendedor" class="desactivar-form">
+											<input type="hidden" name="PK_Vendedor" value="@vendedor.PK_Vendedor">
+											<button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
+												<i class="fa-solid fa-ban"></i>
+											</button>
+										</form>
+									</div>
+								</td>
+							</tr>
+						}
+					}
+					else
+				{
+					<tr>
+						<td colspan="14">No hay datos disponibles.</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
 </div>
 
-<!-- Modal de confirmación -->
-<div id="confirmacionModal" class="fixed inset-0 z-10 overflow-y-auto hidden">
-    <div class="flex items-center justify-center min-h-screen">
-        <div class="bg-white rounded-lg p-6 shadow-xl">
-            <div class="mb-4 text-center">
-                <p class="text-lg font-semibold">¿Seguro que deseas desactivar este Vendedor?</p>
-            </div>
-            <div class="text-center">
-                <button onclick="confirmarDesactivacion()" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2">Confirmar</button>
-                <button onclick="cancelarDesactivacion()" class="border border-gray-300 hover:bg-gray-200 font-semibold py-2 px-4 rounded">Cancelar</button>
-            </div>
-        </div>
-    </div>
-</div>
 
+<!--                  Modal de Crear Template                        -->
+<div id="modalCrearVendedor" class="modal">
+	<div class="modal-content">
+		<form asp-action="CrearVendedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
+			<div class="border-b border-gray-700 pb-6">
+				<h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Vendedor</h2>
+			</div>
+			<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
+				<div>
+					<label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre Vendedor</label>
+					<div class="mt-2">
+						<input asp-for="Nombre" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+					</div>
+				</div>
+				<div>
+					<label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono Vendedor</label>
+					<div class="mt-2">
+						<input asp-for="Telefono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+					</div>
+				</div>
+				<div>
+					<label for="Correo" class="block text-sm font-medium text-gray-300">Correo Vendedor</label>
+					<div class="mt-2">
+						<input asp-for="Correo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+					</div>
+				</div>
+				<div>
+					<label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+					<div class="mt-2">
+						<select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+							<option value="true">Activo</option>
+							<option value="false">Inactivo</option>
+						</select>
+					</div>
+				</div>
+			</div>
+			<div class="mt-6 flex justify-end gap-x-4">
+				<input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+				<input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+				<button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+				<button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+			</div>
+		</form>
+	</div>
+</div>
+<!--                  Final Modal de Crear Tempalte                        -->
+
+<!--                  Modal de Actualizar Template                        -->
+
+
+<!--                  Final Modal de Actualizar Tempalte                        -->
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-    // Función para mostrar el modal de confirmación
-    function mostrarConfirmacion(event) {
-        event.preventDefault();
-        document.getElementById('confirmacionModal').classList.remove('hidden');
-        window.confirmarDesactivacion = function () {
-            event.target.closest('form').submit();
-        };
-        window.cancelarDesactivacion = function () {
-            document.getElementById('confirmacionModal').classList.add('hidden');
-        };
+		// Función para filtrar la tabla de vendedores por nombre
+		function filtrarTabla() {
+			const nombreVendedor = document.getElementById('nombre_vendedor').value.toLowerCase();
+			const filas = document.querySelectorAll('#bodyTablaVendedores tr');
 
-        return false;
-    }
+			filas.forEach(fila => {
+				const cells = fila.getElementsByTagName('td');
+				const matchNombreVendedor = nombreVendedor === '' || cells[1].textContent.toLowerCase().includes(nombreVendedor);
 
-    // Función para filtrar la tabla de vendedores por nombre
-    function filtrarTabla() {
-        const nombreVendedor = document.getElementById('nombre_vendedor').value.toLowerCase();
-        const filas = document.querySelectorAll('#bodyTablaVendedores tr');
+				if (matchNombreVendedor) {
+					fila.style.display = '';
+				} else {
+					fila.style.display = 'none';
+				}
+			});
+		}
 
-        filas.forEach(fila => {
-            const cells = fila.getElementsByTagName('td');
-            const matchNombreVendedor = nombreVendedor === '' || cells[1].textContent.toLowerCase().includes(nombreVendedor);
+		// Agregar evento al campo de texto para filtrar en tiempo real
+		document.getElementById('nombre_vendedor').addEventListener('input', filtrarTabla);
 
-            if (matchNombreVendedor) {
-                fila.style.display = '';
-            } else {
-                fila.style.display = 'none';
-            }
-        });
-    }
+	
+	//Inicio de alerta de guardar de crear
 
-    // Agregar evento al campo de texto para filtrar en tiempo real
-    document.getElementById('nombre_vendedor').addEventListener('input', filtrarTabla);
+	document.getElementById('btnGuardar').addEventListener('click', function (event) {
+		event.preventDefault(); // Detener el envío normal del formulario
+
+		// Validar campos requeridos
+		var nombre = document.querySelector('[name="Nombre"]').value;
+		var telefono = document.querySelector('[name="Telefono"]').value;
+		var correo = document.querySelector('[name="Correo"]').value;
+		var estado = document.querySelector('[name="Estado"]').value;
+
+		if (!nombre || !telefono || !correo || !estado) {
+			// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+			Swal.fire({
+				icon: 'error',
+				title: 'Error',
+				text: 'Por favor complete todos los campos requeridos.',
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'OK'
+			});
+		} else {
+			// Crear objeto FormData con los datos del formulario
+			var formData = new FormData(document.getElementById('formcreate'));
+
+			// Enviar los datos al controlador utilizando fetch
+			fetch('/Vendedores/CrearVendedor', {
+				method: 'POST',
+				body: formData
+			})
+				.then(response => {
+					if (response.ok) {
+						// Mostrar mensaje de éxito con SweetAlert2
+						Swal.fire({
+							icon: 'success',
+							title: 'Guardado Correctamente',
+							showConfirmButton: true,
+							confirmButtonColor: '#3085d6',
+							confirmButtonText: 'OK'
+						}).then((result) => {
+							// Redirigir a la página de índice de vendedores después de guardar
+							window.location.href = '/Vendedores/Index';
+						});
+					} else {
+						throw new Error('Error al guardar los datos');
+					}
+				})
+				.catch(error => {
+					// Mostrar mensaje de error con SweetAlert2
+					Swal.fire({
+						icon: 'error',
+						title: 'Error',
+						text: error.message,
+						confirmButtonColor: '#3085d6',
+						cancelButtonColor: '#d33',
+						confirmButtonText: 'OK'
+					});
+				});
+		}
+	});
+
+		// <!-- Inicio Validación botón desactivar -->
+		document.querySelectorAll('.desactivar-form').forEach(function (form) {
+			form.addEventListener('submit', function (event) {
+				event.preventDefault(); // Detener el envío normal del formulario
+
+				// Obtener la PK del transporte desde el formulario
+				var pkVendedor = this.querySelector('input[name="PK_Vendedor"]').value;
+
+				// Mostrar mensaje de confirmación con SweetAlert2
+				Swal.fire({
+					title: '¿Está seguro?',
+					text: "¿Desea desactivar este Vendedor?",
+					icon: 'warning',
+					showCancelButton: true,
+					confirmButtonColor: '#3085d6',
+					cancelButtonColor: '#d33',
+					confirmButtonText: 'Sí, desactivar',
+					cancelButtonText: 'Cancelar'
+				}).then((result) => {
+					if (result.isConfirmed) {
+						// Enviar la solicitud para desactivar el vendedor
+						fetch(`/Vendedores/DesactivarVendedor?PK=${pkVendedor}`, {
+							method: 'POST'
+						})
+							.then(response => {
+								if (response.ok) {
+									// Mostrar mensaje de éxito con SweetAlert2
+									Swal.fire({
+										icon: 'success',
+										title: 'Vendedor desactivado correctamente',
+										showConfirmButton: true,
+										confirmButtonColor: '#3085d6',
+										confirmButtonText: 'OK'
+									}).then((result) => {
+										// Recargar la página después de desactivar
+										location.reload();
+									});
+								} else {
+									throw new Error('Error al desactivar el vendedor');
+								}
+							})
+							.catch(error => {
+								// Mostrar mensaje de error con SweetAlert2
+								Swal.fire({
+									icon: 'error',
+									title: 'Error',
+									text: error.message,
+									confirmButtonColor: '#3085d6',
+									cancelButtonColor: '#d33',
+									confirmButtonText: 'OK'
+								});
+							});
+					}
+				});
+			});
+		});
+		// <!-- Fin Validación botón desactivar -->
+
+	
 </script>
+</body>
+</html>
