Push errores Usuarios
Push errores Usuarios

--- a/ADMFacturar/Views/Shared/Header.cshtml
+++ b/ADMFacturar/Views/Shared/Header.cshtml
@@ -8,6 +8,11 @@
                 <button class="relative z-10 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:outline-none">
                     <i class="fas fa-user" style="color:white"></i>
                 </button>
-            </a>
+        </a>
+        <a asp-controller="Seguridad" asp-action="Logout">
+            <button class="relative z-10 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:outline-none">
+                <i class="fas fa-user" style="color:red"></i>
+            </button>
+        </a>
     </div>
 </header>
